--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "name": "imuncle",
-    "repo": "gitblog",
-    "client_id": "4148cca0f91e524d1a42",
-    "client_secret": "637c2c993cccf79c51a0a215f538932edfdcb9b0",
+    "name": "wenyuehe",
+    "repo": "wenyuehe.github.io",
+    "client_id": "0beb9242823c51d8fa05",
+    "client_secret": "bfa119daf744e902441c115f03e954f313e4109d",
     "title": "Gitblog",
     "instruction": "基于GitHub issue的个人博客模板",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
